# pitboss

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  cliff.toml  dist-workspace.toml  pitboss.example.toml
.cargo/: config.toml
book/: book.toml
crates/mosaic-core/: Cargo.toml
crates/mosaic-core/src/: error.rs  lib.rs  prices.rs
crates/mosaic-core/src/parser/: events.rs  mod.rs
crates/mosaic-core/src/process/: fake.rs  mod.rs  spawner.rs  tokio_impl.rs
crates/mosaic-core/src/session/: handle.rs  mod.rs  outcome.rs
crates/mosaic-core/src/store/: mod.rs  record.rs  sqlite.rs  traits.rs
crates/mosaic-core/src/worktree/: manager.rs  mod.rs
crates/mosaic-tui/: Cargo.toml  README.md
crates/mosaic-tui/src/: app.rs  main.rs  prices.rs  runs.rs  state.rs  tui.rs  watcher.rs
crates/pitboss-cli/: Cargo.toml
crates/pitboss-cli/examples/: shared_store_demo.rs
crates/pitboss-cli/src/: agents_md.rs  attach.rs  cli.rs  diff.rs  lib.rs  list.rs  main.rs  prune.rs  runs.rs  status.rs  tree.rs  tui_table.rs
crates/pitboss-cli/src/control/: mod.rs  protocol.rs  server.rs
crates/pitboss-cli/src/dispatch/: actor.rs  background.rs  container.rs  container_build.rs  container_prune.rs  depth.rs  entrypoint.rs  events.rs  failure_detection.rs  hierarchical.rs  kill_resume.rs  layer.rs  mod.rs  probe.rs  resume.rs  runner.rs  signals.rs  state.rs  sublead.rs  summary.rs
crates/pitboss-cli/src/manifest/: error.rs  example_doc.rs  init_template.rs  load.rs  map_doc.rs  metadata.rs  mod.rs  resolve.rs  schema.rs  validate.rs
crates/pitboss-cli/src/mcp/: approval.rs  bridge.rs  mod.rs  policy.rs  server.rs  tools.rs
crates/pitboss-cli/src/mcp/tools/: approval.rs  lifecycle.rs  spawn.rs  tests.rs  wait.rs
crates/pitboss-cli/src/notify/: config.rs  mod.rs  parent.rs
crates/pitboss-cli/src/notify/sinks/: discord.rs  log.rs  mod.rs  slack.rs  webhook.rs
crates/pitboss-cli/src/provider/: goose.rs  mod.rs
crates/pitboss-cli/src/shared_store/: leases.rs  mod.rs  run_leases.rs  tools.rs
crates/pitboss-cli/tests/: background_flows.rs  cancel_cascade_flows.rs  control_flows.rs  dispatch_flows.rs  dogfood_fake_flows.rs  dogfood_real_flows.rs  e2e_flows.rs  e2e_sublead_flows.rs  hierarchical_flows.rs  notify_flows.rs  shared_store_flows.rs  sublead_flows.rs
crates/pitboss-cli/tests/fixtures/scripts/: exit2.jsonl  goose-exit2.jsonl  goose-hold.jsonl  goose-success.jsonl  hold.jsonl
crates/pitboss-cli/tests/support/: mod.rs
crates/pitboss-core/: Cargo.toml
crates/pitboss-core/src/: atomic_write.rs  error.rs  failure_classify.rs  fmt.rs  lib.rs  prices.rs  provider.rs
crates/pitboss-core/src/parser/: events.rs  mod.rs
crates/pitboss-core/src/process/: fake.rs  spawner.rs  tokio_impl.rs
crates/pitboss-core/src/session/: cancel.rs  handle.rs  mod.rs  outcome.rs  state.rs
crates/pitboss-core/src/store/: json_file.rs  mod.rs  record.rs  sqlite.rs  traits.rs
crates/pitboss-core/src/worktree/: manager.rs  mod.rs
crates/pitboss-schema/: Cargo.toml
crates/pitboss-schema-derive/: Cargo.toml
crates/pitboss-schema-derive/src/: lib.rs
crates/pitboss-schema/src/: lib.rs
crates/pitboss-schema/tests/: derive.rs
crates/pitboss-tui/: Cargo.toml  README.md
crates/pitboss-tui/src/: app.rs  approval_list.rs  control.rs  grouped_grid.rs  lib.rs  main.rs  runs.rs  state.rs  theme.rs  tui.rs  watcher.rs
crates/pitboss-tui/tests/: tui_control.rs
crates/pitboss-web/: Cargo.toml
crates/pitboss-web/spa/: .gitignore  .prettierignore  components.json  package-lock.json  package.json  vite.config.ts
crates/pitboss-web/spa/src/: app.css  app.html
crates/pitboss-web/spa/src/lib/: api.ts  prices.ts  utils.ts
crates/pitboss-web/spa/src/lib/components/: approval-modal.svelte  help-tip.svelte  policy-editor.svelte  run-graph-node.svelte  run-graph.svelte  run-tile-grid.svelte  site-header.svelte  status-badge.svelte
crates/pitboss-web/spa/src/lib/components/charts/: echart.svelte
crates/pitboss-web/spa/src/lib/components/insights/: template-pills.svelte
crates/pitboss-web/spa/src/lib/components/ui/badge/: badge.svelte  index.ts
crates/pitboss-web/spa/src/lib/wizard/: compose.ts  state.ts
crates/pitboss-web/spa/src/routes/: +layout.svelte  +layout.ts  +page.svelte
crates/pitboss-web/spa/src/routes/insights/failures/: +page.svelte
crates/pitboss-web/spa/src/routes/manifests/: +page.svelte
crates/pitboss-web/spa/src/routes/manifests/[name]/: +page.svelte
crates/pitboss-web/spa/src/routes/manifests/new/: +page.svelte
crates/pitboss-web/spa/src/routes/runs/[id]/: +page.svelte
crates/pitboss-web/src/: assets.rs  control_bridge.rs  error.rs  main.rs  pidfile.rs  runs_index.rs  state.rs
crates/pitboss-web/src/api/: control.rs  events.rs  insights.rs  manifests.rs  mod.rs  runs.rs
crates/pitboss-web/src/insights/: aggregator.rs  cache.rs  cluster.rs  digest.rs  mod.rs  tokenizer.rs
crates/pitboss-web/tests/: control_bridge_integration.rs  insights_aggregator_integration.rs  manifests_download_integration.rs
crates/shire-cli/: Cargo.toml
crates/shire-cli/src/: cli.rs  diff.rs  lib.rs  main.rs  tui_table.rs
crates/shire-cli/src/dispatch/: hierarchical.rs  mod.rs  probe.rs  resume.rs  runner.rs  signals.rs  state.rs
crates/shire-cli/src/manifest/: load.rs  mod.rs  resolve.rs  schema.rs  validate.rs
crates/shire-cli/src/mcp/: bridge.rs  mod.rs  server.rs  tools.rs
crates/shire-cli/tests/: dispatch_flows.rs  hierarchical_flows.rs
crates/shire-cli/tests/fixtures/scripts/: failure.jsonl  success.jsonl
crates/shire-cli/tests/support/: mod.rs
tests-support/fake-claude/: Cargo.toml
tests-support/fake-claude/src/: bindings.rs  main.rs  mcp_client.rs  script.rs
tests-support/fake-control-client/: Cargo.toml
tests-support/fake-control-client/src/: lib.rs
tests-support/fake-goose/: Cargo.toml
tests-support/fake-goose/src/: main.rs
tests-support/fake-mcp-client/: Cargo.toml
tests-support/fake-mcp-client/src/: lib.rs
(+162 files in other folders)
