[workspace]
resolver = "2"
members = [
    "crates/mosaic-core",
    "crates/shire-cli",
    "crates/mosaic-tui",
    "tests-support/fake-claude",
    "tests-support/fake-mcp-client",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
rust-version = "1.82"
license     = "MIT OR Apache-2.0"
authors     = ["Agent Shire contributors"]

[workspace.dependencies]
tokio              = { version = "1", features = ["rt-multi-thread","process","io-util","sync","time","signal","macros","fs","net"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
uuid               = { version = "1", features = ["v7","serde"] }
chrono             = { version = "0.4", features = ["serde"] }
git2               = "0.19"
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
async-trait        = "0.1"
clap               = { version = "4", features = ["derive"] }
shellexpand        = "3"
atty               = "0.2"
tempfile           = "3"
libc               = "0.2"
ratatui            = "0.29"
crossterm          = "0.28"
rusqlite           = { version = "0.32", features = ["bundled"] }
rmcp               = { version = "0.8", features = ["server", "client", "transport-io", "macros"] }
