[workspace]
resolver = "2"
members = [
    "crates/pitboss-core",
    "crates/pitboss-cli",
    "crates/pitboss-tui",
    "crates/pitboss-web",
    "crates/pitboss-schema",
    "crates/pitboss-schema-derive",
    "tests-support/fake-claude",
    "tests-support/fake-mcp-client",
    "tests-support/fake-control-client",
]

[workspace.package]
version     = "0.9.0"
edition     = "2021"
rust-version = "1.82"
license     = "MIT OR Apache-2.0"
authors     = ["Pitboss contributors"]
description = "Dispatcher for running and observing parallel Claude Code sessions."
repository  = "https://github.com/SDS-Mode/pitboss"
homepage    = "https://github.com/SDS-Mode/pitboss"
readme      = "README.md"

[workspace.dependencies]
tokio              = { version = "1", features = ["rt-multi-thread","process","io-util","sync","time","signal","macros","fs","net"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
uuid               = { version = "1", features = ["v7","serde"] }
chrono             = { version = "0.4", features = ["serde"] }
git2               = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt"] }
async-trait        = "0.1"
clap               = { version = "4", features = ["derive"] }
clap_complete      = "4"
shellexpand        = "3"
atty               = "0.2"
tempfile           = "3"
libc               = "0.2"
ratatui            = "0.29"
crossterm          = "0.28"
rusqlite           = { version = "0.32", features = ["bundled"] }
rmcp               = { version = "0.8", features = ["server", "client", "transport-io", "macros"] }
tokio-util         = { version = "0.7", features = ["rt"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tui-textarea       = "0.7"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lru                = "0.12"
wiremock           = "0.6"
tracing-test       = "0.2"
glob               = "0.3"
base64             = "0.22"
axum               = { version = "0.8", features = ["macros"] }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["fs", "cors", "trace", "set-header"] }
rust-embed         = { version = "8", features = ["interpolate-folder-path"] }
mime_guess         = "2"
futures-util       = "0.3"
notify             = "6"
dirs               = "5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
