[package]
name         = "mosaic-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[features]
default = []
test-support = []

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
git2        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
libc        = { workspace = true }

[dev-dependencies]
mosaic-core = { path = ".", features = ["test-support"] }
tempfile    = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
