[package]
name         = "mosaic-tui"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "mosaic"
path = "src/main.rs"

[dependencies]
mosaic-core = { path = "../mosaic-core" }
ratatui     = { workspace = true }
crossterm   = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
