[package]
name         = "pitboss-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[lib]
name = "pitboss_cli"
path = "src/lib.rs"

[[bin]]
name = "pitboss"
path = "src/main.rs"

[features]
# test-support was introduced alongside a self-dependency trick to enable
# pitboss-core's test-support feature in pitboss-cli's own unit tests. Since
# pitboss-cli now pulls pitboss-core's test-support directly via dev-dependencies,
# this feature is no longer load-bearing. Kept as an empty opt-in so external
# consumers that previously passed `--features pitboss-cli/test-support` don't
# break.
test-support = ["pitboss-core/test-support"]

[dependencies]
pitboss-core       = { path = "../pitboss-core" }
git2               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand        = { workspace = true }
atty               = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
async-trait        = { workspace = true }
rmcp               = { workspace = true }
schemars           = "1"

[dev-dependencies]
# Note: pitboss-core's test-support feature is pulled in directly here so
# pitboss-cli's own tests can use FakeSpawner without requiring the caller to
# pass --features.
tempfile        = { workspace = true }
serde_json      = { workspace = true }
libc            = { workspace = true }
pitboss-core    = { path = "../pitboss-core", features = ["test-support"] }
fake-mcp-client = { path = "../../tests-support/fake-mcp-client" }
