[package]
name         = "pitboss-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
description  = { workspace = true }
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = { workspace = true }

[lib]
name = "pitboss_cli"
path = "src/lib.rs"

[[bin]]
name = "pitboss"
path = "src/main.rs"

[features]
# test-support was introduced alongside a self-dependency trick to enable
# pitboss-core's test-support feature in pitboss-cli's own unit tests. Since
# pitboss-cli now pulls pitboss-core's test-support directly via dev-dependencies,
# this feature is no longer load-bearing. Kept as an empty opt-in so external
# consumers that previously passed `--features pitboss-cli/test-support` don't
# break.
test-support = ["pitboss-core/test-support"]

[dependencies]
pitboss-core       = { path = "../pitboss-core" }
pitboss-schema     = { path = "../pitboss-schema" }
git2               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand        = { workspace = true }
atty               = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
async-trait        = { workspace = true }
rmcp               = { workspace = true }
tokio-util         = { workspace = true }
thiserror          = { workspace = true }
schemars           = "1"
reqwest            = { workspace = true }
lru                = { workspace = true }
glob               = { workspace = true }
dirs               = { workspace = true }
base64             = { workspace = true }
libc               = { workspace = true }

[dev-dependencies]
# Note: pitboss-core's test-support feature is pulled in directly here so
# pitboss-cli's own tests can use FakeSpawner without requiring the caller to
# pass --features.
tempfile        = { workspace = true }
serde_json      = { workspace = true }
libc            = { workspace = true }
pitboss-core    = { path = "../pitboss-core", features = ["test-support"] }
fake-mcp-client = { path = "../../tests-support/fake-mcp-client" }
fake-control-client = { path = "../../tests-support/fake-control-client" }
wiremock           = { workspace = true }
tracing-test       = { workspace = true }
