[package]
name         = "pitboss-tui"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "pitboss-tui"
path = "src/main.rs"

[dependencies]
pitboss-core = { path = "../pitboss-core" }
ratatui      = { workspace = true }
crossterm    = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
clap_complete = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
