[package]
name         = "pitboss-tui"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
description  = "TUI companion for pitboss — live tile grid, log tailing, budget counters."
repository   = { workspace = true }
homepage     = { workspace = true }
readme       = "README.md"

[lib]
name = "pitboss_tui"
path = "src/lib.rs"

[[bin]]
name = "pitboss-tui"
path = "src/main.rs"

[dependencies]
pitboss-core = { path = "../pitboss-core" }
pitboss-cli  = { path = "../pitboss-cli" }
ratatui      = { workspace = true }
crossterm    = { workspace = true }
anyhow       = { workspace = true }
clap         = { workspace = true }
clap_complete = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
uuid         = { workspace = true }
tracing      = { workspace = true }
tui-textarea = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
