[package]
name         = "shire-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[[bin]]
name = "shire"
path = "src/main.rs"

[features]
test-support = ["mosaic-core/test-support"]

[dependencies]
mosaic-core        = { path = "../mosaic-core" }
git2               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand        = { workspace = true }
atty               = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
async-trait        = { workspace = true }

[dev-dependencies]
shire-cli   = { path = ".", features = ["test-support"] }
tempfile    = { workspace = true }
serde_json  = { workspace = true }
mosaic-core = { path = "../mosaic-core", features = ["test-support"] }
