[package]
name         = "shire-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }

[lib]
name = "shire_cli"
path = "src/lib.rs"

[[bin]]
name = "shire"
path = "src/main.rs"

[features]
# test-support was introduced alongside a self-dependency trick to enable
# mosaic-core's test-support feature in shire-cli's own unit tests. Since
# shire-cli now pulls mosaic-core's test-support directly via dev-dependencies,
# this feature is no longer load-bearing. Kept as an empty opt-in so external
# consumers that previously passed `--features shire-cli/test-support` don't
# break.
test-support = ["mosaic-core/test-support"]

[dependencies]
mosaic-core        = { path = "../mosaic-core" }
git2               = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
shellexpand        = { workspace = true }
atty               = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
async-trait        = { workspace = true }
rmcp               = { workspace = true }
schemars           = "1"

[dev-dependencies]
# Note: mosaic-core's test-support feature is pulled in directly here so
# shire-cli's own tests can use FakeSpawner without requiring the caller to
# pass --features.
tempfile        = { workspace = true }
serde_json      = { workspace = true }
libc            = { workspace = true }
mosaic-core     = { path = "../mosaic-core", features = ["test-support"] }
fake-mcp-client = { path = "../../tests-support/fake-mcp-client" }
