[package]
name         = "fake-claude"
version      = "0.0.0"
edition      = "2021"
rust-version = "1.82"
publish      = false

[[bin]]
name = "fake-claude"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
rmcp       = { workspace = true, features = ["client", "transport-io"] }
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "process", "fs", "time"] }
anyhow     = { workspace = true }
