[package]
name         = "fake-mcp-client"
version      = "0.0.0"
edition      = "2021"
rust-version = "1.82"
publish      = false

[dependencies]
rmcp       = { workspace = true, features = ["client", "transport-io"] }
tokio      = { workspace = true, features = ["net","io-util","rt-multi-thread","macros"] }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
